--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 * {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
