--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
+          <span class="credits left"><a href="CV_Clement_Lartot.pdf">Retrouvez mon CV ici.</a></span>
         </div>
 
         {{ content }}
