--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,11 @@
 .credits {
   font-size: 14px !important;
 }
+
+.wrapper {
+  max-width: 720px !important;
+}
+
+section {
+  max-width: 720px !important;
+}
