--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="Magnific-Popup/magnific-popup.css">
+    <link rel="stylesheet" href="assets/js/Magnific-Popup/magnific-popup.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
@@ -45,6 +45,6 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
-    <script src="Magnific-Popup/jquery.magnific-popup.js"></script>
+    <script src="assets/js/Magnific-Popup/jquery.magnific-popup.js"></script>
   </body>
 </html>
