--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,5 +46,6 @@
       </script>
     {% endif %}
     <script src="assets/js/Magnific-Popup/jquery.magnific-popup.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
