--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,11 @@ section {
 .mfp-video .mfp-close {
   color: #FFF !important;
 }
+
+#ocean img {
+  max-width: 49%;
+}
+
+#ocean-wireframe img {
+  max-width: 49%;
+}
