--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,9 +37,9 @@ section {
 }
 
 #ocean img {
-  max-width: 49%;
+  max-width: 49% !important;
 }
 
 #ocean-wireframe img {
-  max-width: 49%;
+  max-width: 49% !important;
 }
