--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,10 @@ section {
   max-width: 720px !important;
 }
 
+h4 {
+  text-decoration: underline !important;
+}
+
 .mfp-video {
   position: relative;
   max-width: 70%;
