--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,10 @@
   max-width: 720px !important;
 }
 
+#portfolio {
+  visibility: collapse !important;
+}
+
 section {
   max-width: 720px !important;
 }
